some small changes to fix the pages

--- a/index.html
+++ b/index.html
@@ -32,12 +32,16 @@
     
 
     <footer class="footer">
-        <div class="row justify-content-center">             
+        <div class="row justify-content-center">  
                 <div class="col-auto">
                     <p>© Copyright 2020 Dead-Code-18</p>
                 </div>
            </div>
     </footer>
-</body>
 
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+</body>
 </html>
