--- a/pages/signup.html
+++ b/pages/signup.html
@@ -62,16 +62,15 @@
     </div>
 
     <footer class="footer">
-
-        <div class="row justify-content-center">             
-                <div class="col-auto">
-                    <p>© Copyright 2020 Dead-Code-18</p>
-                </div>
-           </div>
+    	<div class="row justify-content-center">    <div class="col-auto">
+                <p>© Copyright 2020 Dead-Code-18</p>
+            </div>
+        </div>
     </footer>
 
 	<script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
 </body>
 </html>
