--- a/pages/login.html
+++ b/pages/login.html
@@ -36,11 +36,11 @@
                     <h3 class="text-secondary text-height">Log In</h1>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control username" id="email" placeholder="Email" name="email">
+                        <input type="email" class="form-control username" id="email" placeholder="Email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control password" id="password" placeholder="Password" name="password">
+                        <input type="password" class="form-control password" id="password" placeholder="Password" name="password" required>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-primary btn-customized">Log In</button>
