--- a/pages/signup.html
+++ b/pages/signup.html
@@ -36,19 +36,27 @@
                     <h3 class="text-secondary text-height">Sign Up</h1>
                     <div class="form-group">
                         <label for="fname">First Name</label>
-                        <input type="text" class="form-control" id="fname" placeholder="First Name" name="fname">
+                        <input type="text" class="form-control" id="fname" placeholder="First Name" name="fname" required>
                     </div>
                     <div class="form-group">
                         <label for="lname">Last Name</label>
-                        <input type="text" class="form-control" id="lname" placeholder="Last Name" name="lname">
+                        <input type="text" class="form-control" id="lname" placeholder="Last Name" name="lname" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Email" name="email">
+                        <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+                        <input type="password" class="form-control" id="password" placeholder="Password" name="password" pattern=".{5,50}" required title="Password must be between 5 and 50 charactrers">
+                    </div>
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" name="approve" id="approve" value="" required>
+                            <label class="form-check-label" for="approve">
+                                By signing up, you agree to our Terms of Use and Privacy Policy.
+                            </label>
+                        </div>
                     </div>
                     <div>
                         <button type="submit" class="btn btn-primary btn-customized">Sign Up</button>
