--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -8,10 +8,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>ELearning</title>
 </head>
 
@@ -21,16 +21,16 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#">ELearning</a>
+            <a class="navbar-brand mr-auto" href="../index.html">ELearning</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                	<li class="nav-item"><a class="nav-link" href="./pages/aboutus.html">   </a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/aboutus.html"><span class="fa fa-info fa-lg"></span> About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                	<li class="nav-item"><a class="nav-link" href="#">   </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="./pages/login.html"><span class="fa fa-sign-in fa-lg"></span> Log In</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./pages/signup.html"><span class="fa fa-plus fa-lg"></span> Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./login.html"><span class="fa fa-sign-in fa-lg"></span> Log In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./signup.html"><span class="fa fa-plus fa-lg"></span> Sign Up</a></li>
                 </ul>
             </div>
         </div>
@@ -47,21 +47,7 @@
                 </div>
             </div>
         </div>
-    </header>	
-
-    <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-
+    </header>	    
 
    <footer class="footer">
         <div class="container">
@@ -69,9 +55,9 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="../aboutus.html">About</a></li>
-                        <li><a href="../contactus.html">Contact</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 offset-sm-1 col-sm-4">
@@ -100,9 +86,9 @@
             </div>
     </footer>
 
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
