added add form and some other fixes in the pages

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>ELearning</h1>
-                    <p></p>
-                </div>
-                <div class="col-12 col-sm">
+                    <p class="copyright"></p>
+                    <p><h5>What do you want to learn?</h5></p>
+                    <form class="form-inline d-flex md-form form-sm mt-2">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                    </form>
                 </div>
             </div>
         </div>
@@ -57,24 +60,20 @@
     </div>
      <div class="row row-content">
     </div>
-     <div class="row row-content">
-    </div>
-     <div class="row row-content">
-    </div>
-
+     
 
    <footer class="footer">
         <div class="container">
             <div class="row">             
-                <div class="col-4 offset-1 col-sm-2">
+                <div class="col-3 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="../aboutus.html">About</a></li>
-                        <li><a href="../contactus.html">Contact</a></li>
+                        <li><a href="./pages/aboutus.html">About</a></li>
+                        <li><a href="./pages/contactus.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-7 offset-sm-1 col-sm-4">
+                <div class="col-8 offset-sm-1 col-sm-3">
                     <h5>Contact Information</h5>
                     <i class="fa fa-phone"></i>: +880 1608 537383<br>
                     <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
@@ -83,8 +82,9 @@
                     <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i class="fa fa-envelope-o"></i>Email</a>
                 </div>
                 </div>
+                <div class="col-12 col-sm-1 copyright"></div>  
                 <div class="col-12 col-sm-4 align-self-center">
-                    <div class="text-center">
+                    <div class="text-center">   
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
                         <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
