--- a/pages/login.html
+++ b/pages/login.html
@@ -66,7 +66,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">             
-                <div class="col-4 offset-1 col-sm-2">
+                <div class="col-3 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="../index.html">Home</a></li>
@@ -74,7 +74,7 @@
                         <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-7 offset-sm-1 col-sm-4">
+                <div class="col-8 offset-sm-1 col-sm-3">
                     <h5>Contact Information</h5>
                     <i class="fa fa-phone"></i>: +880 1608 537383<br>
                     <i class="fa fa-envelope"></i>:<a href="mailto:dcode180042@gmail.com"> dcode180042@gmail.com</a>
@@ -83,6 +83,7 @@
                     <a role="button" class="btn btn-success" href="mailto:dcode180042@gmail.com"><i class="fa fa-envelope-o"></i>Email</a>
                 </div>
                 </div>
+                <div class="col-12 col-sm-1 copyright"></div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
