added active status for aboutus and contactus

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                 	<li class="nav-item"><a class="nav-link" href="#">   </a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About Us</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span> About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
