--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav mr-auto">
                 	<li class="nav-item"><a class="nav-link" href="./aboutus.html">   </a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="./login.html"><span class="fa fa-sign-in fa-lg"></span> Log In</a></li>
